# Mini-OS-simulator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: fcfs_scheduler.h  filesys.h  instruction.h  memory_manager.h  paging.h  priority_scheduler.h  process.h  rr_scheduler.h  runner.h  scheduler.h  sjf_scheduler.h
src/: fcfs_scheduler.cpp  filesys.cpp  filesys_demo.cpp  main.cpp  memory_demo.cpp  memory_manager.cpp  paging.cpp  paging_demo.cpp  priority_scheduler.cpp  rr_scheduler.cpp  runner.cpp  runner_demo.cpp  sjf_scheduler.cpp
